Programación de selección de términos según primera letra y ajustes gráficos

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -1,3 +1,44 @@
+body{
+  background-color: #f0f8f6;
+}
+
+.container{
+  background-color: #93ccbb;
+}
+
+ul {
+  list-style: none; 
+  padding: 0; 
+  margin-left: 10px; 
+  }
+  
+  li::before { 
+  content: "\2022"; 
+  padding-right: 8px; 
+  color: brown; 
+  }
+
+  #educatico{
+    margin-top: -14%;
+  }
+
+#detalles{
+  background-color: white;
+  padding: 5%;
+  margin-left: 0.125%;
+  margin-right: 0.125%;
+  height: 36vw;
+}
+
+.par{
+  font-weight: bold;
+  border: none;
+}
+
+#B,#D,#F,#H,#J,#L,#N,#O,#Q,#S,#U,#W,#Y{
+  background-color: #93cbb9;
+}
+
 .iconos{
     padding-right: 1em;
 }
@@ -61,14 +102,14 @@
   }
 
   .banner{
-      width: 100%;
+    width: 93%;
   }
 
   .lista_terminos{
       color: darkblue;
       font-size: 3vh;
       cursor: pointer;
-      padding-left: 4rem;
+      padding-left: 0rem;
   }
 
   .textos_gnabere{
