--- a/src/css/master.css
+++ b/src/css/master.css
@@ -72,8 +72,13 @@ body{
     width: 35%;
   }
 
-  #menu_letras
-  {margin-top: 1%;
+  #menu_letras{
+    margin-top: 1%;
+    z-index: 999999999;
+  }
+
+  .letrasMovil{
+    z-index: 9999999999;
   }
 
 #detalles{
@@ -105,6 +110,14 @@ body{
   height: 20%;
 }
 
+/* .react-multiple-carousel__arrow--left{
+  margin-left: -30px;
+  z-index: 1000000;
+}
+.react-multiple-carousel__arrow--right{
+  margin-right: -30px;
+  z-index: 1000000;
+} */
 
 
 .par{
@@ -119,7 +132,7 @@ body{
 .parMovil{
   font-weight: bold;
   border: none;
-  font-size: 4vw;
+  font-size: 12vw;
   margin-right: -1px;
   margin-left: -1px;
   height: 90%;
