--- a/src/css/master.css
+++ b/src/css/master.css
@@ -91,11 +91,14 @@ body{
   }
 
 #detalles{
+  /* border-style: solid;
+    border-width: thin;
+    border-color: #EF7963; */
   background-color: white;
   padding: 5%;
   margin-left: -2.875%;
   margin-right: -3.875%;
-  height: 38vw;
+  height: 87%;
 }
 
 #detallesMovil{
@@ -132,9 +135,9 @@ body{
 .par{
   font-weight: bold;
   border: none;
-  font-size: 1.5vw;
-  margin-right: -1px;
-  margin-left: -1px;
+  font-size: 3.1vh;
+  margin-right: 0px;
+  margin-left: 0px;
   height: 56%;
 }
 
@@ -151,8 +154,24 @@ body{
 }
 
 .esquina{
-  position: absolute;
-  margin-left: -101%;
+  /* position: absolute; */
+  margin-left: 0%;
+  text-align: right;
+}
+
+.barra_color{
+  left: -1%;
+  /* margin-bottom: 3%; */
+  /* background: linear-gradient(to right, #EF7963, #80B1A2); */
+  background: rgb(239,121,99);
+background: linear-gradient(90deg, rgba(239,121,99,1) 0%, rgba(158,152,152,0) 100%);
+}
+
+.barra_color_inf{
+  left: -1%;
+  margin-top: 0%;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(158,152,152,0) 0%, rgba(239,121,99,1) 47%, rgba(239,121,99,1) 100%, rgba(0,212,255,1) 100%);
 }
 
 .esquinaMovil{
@@ -169,9 +188,9 @@ body{
   /* position: absolute; */
   float: right;
   bottom: 0px;
-  margin-top: -224px;
+  /* margin-top: -224px; */
 
-  margin-right: -32px;
+  margin-right: -22px;
 }
 
 #esquinaIDMovil{
@@ -205,12 +224,20 @@ body{
   float: right;
     bottom: 0px;
     z-index: 9999999999;
-  
+    right: -12px;
+
   
 position: absolute;
-    bottom: 0px;
-    right: 0px;
+
     
+}
+
+button{
+  background-color: #efefef2e;
+}
+
+.letras_abc{
+  margin-bottom: -3%;
 }
 
 #logo-mepMovil{
